--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
         <div class="mySlides fade;">
             <div class="numbertext">1 / 3</div>
-            <img src=" charity/images/img1.JPG " style="width:100vw; height: 80vh;">
+            <img src="images/img1.JPG " style="width:100vw; height: 80vh;">
             <div class="text">Caption Text</div>
         </div>
     
